# boardgame

./: .gitignore  090index.html  BACKLOG.md  README.md  branch.sh.azadbolour  branch.sh.template  feature  index.html.090  out-of-memory.error  pre-build.sh
benchmark/: README.md  pom.xml  run.sh  test-config.yml
boardgame-ui/: .gitignore  CONVENTIONS.md  DESIGN.md  NOTES.md  README.md  aws-cloudfront-s3.notes  bundle-prod.sh  deploy2-s3.sh  global-installs.sh  package-lock.json  package.json  promises.md  redux.notes  run.sh  todo.txt
dict/: README.md  moby-english.txt
docker/: Dockerfile  Dockerfile.boardgame  Dockerfile.boardgame-base  README.md  build-boardgame-base-docker.sh  build-boardgame-docker.sh  build-docker-base.sh  run-docker-game.sh  (+1 more)
haskell-server/: .gitignore  CONVENTIONS.md  README.md  add-base-data.sh  bld.sh  boardgame.cabal  boardgame.cabal.run  boardgame.cabal.test  browsedocs.sh  build-library.sh  cd-run.sh  clear-db.sh  clear-postgres-db.sh  clear-sqlite-db.sh  config.yml.template  dot.spacemacs.save  gendocs.sh  haskell-notes.md  haskell.notes  migrate-postgres.sh  package.sh  populate-seed-data.sh  preprocess-masked-words.sh  profile-bld.sh  profile-run.sh  run-all-suites.sh  run-sample.sh  run-test-suite.sh  run.sh  setrun.sh  settest.sh  stack.yaml  test-library.sh  todocument  update-ui-bundle.sh
haskell-server/app/: DatabaseMigrator.hs  DistributionTrial.hs  Main.hs  SampleClient.hs  SeedDataPopulator.hs  Trial.hs
haskell-server/data/: test-words.txt  tiny-words.txt
haskell-server/database/: .gitignore  .keepme
haskell-server/docker/: Dockerfile.boardgame-base  Dockerfile.boardgame-haskell  Dockerfile.boardgame-haskell-base  Dockerfile.boardgame-haskell-packager  Dockerfile.boardgame-haskell-server  README  README.md  build-boardgame-docker.sh  build-boardgame-haskell-docker.sh  build-boardgame-haskell-server.sh  build-prod.sh  run-docker-boardgame-haskell.sh
haskell-server/docker/experimental/: Dockerfile.boardgame-haskell-server  README  build-prod.sh
haskell-server/src/BoardGame/Client/: GameClient.hs
haskell-server/src/BoardGame/Common/: GameApi.hs
haskell-server/src/BoardGame/Common/Domain/: GameInitialPieces.hs  GameMiniState.hs  GameParams.hs  GameSummary.hs  Grid.hs  GridPiece.hs  GridValue.hs  InitPieces.hs  Piece.hs  PieceGen.hs  PieceGeneratorType.hs  PiecePoint.hs  PieceProviderType.hs  PlayPiece.hs  Player.hs  PlayerDto.hs  Point.hs  PointSymmetry.hs  ScoreMultiplier.hs  ScoreMultiplierType.hs  SparseGrid.hs  StopInfo.hs  SwissCheeseGrid.hs  TileSack.hs
haskell-server/src/BoardGame/Common/Message/: CommitPlayResponse.hs  GameDto.hs  HandShakeResponse.hs  MachinePlayResponse.hs  PlayerDto.hs  StartGameRequest.hs  StartGameResponse.hs  SwapPieceResponse.hs
haskell-server/src/BoardGame/Server/Domain/: Board.hs  BoardStripMatcher.hs  Core.hs  CrossWordFinder.hs  DictionaryCache.hs  Game.hs  GameBase.hs  GameCache.hs  GameConfig.hs  GameEnv.hs  GameError.hs  GameTransitions.hs  Grid.hs  IndexedLanguageDictionary.hs  IndexedStripMatcher.hs  LanguageDictionary.hs  PieceGen.hs  PieceGenerator.hs  PieceProvider.hs  Play.hs  PlayDetails.hs  PlayInfo.hs  Player.hs  RandomPieceGenerator.hs  Scorer.hs  ServerConfig.hs  ServerVersion.hs  Strip.hs  StripMatcher.hs  SwissBoard.hs  TileSack.hs  Tray.hs  WordDictionary.hs
haskell-server/src/BoardGame/Server/Service/: GameDao.hs  GameData.hs  GameJsonPersister.hs  GameJsonSlickPersister.hs  GameJsonSqlPersister.hs  GameLetterDistribution.hs  GamePersister.hs  GamePersisterJsonBridge.hs  GameService.hs  GameTransformerStack.hs  TypeDefs.hs
haskell-server/src/BoardGame/Server/Web/: Converters.hs  GameEndPoint.hs
haskell-server/src/BoardGame/Util/: WordUtil.hs
haskell-server/src/Bolour/Grid/: BlackWhiteGrid.hs  Grid.hs  GridValue.hs  Point.hs  SparseGrid.hs
haskell-server/src/Bolour/Language/Domain/: DictionaryCache.hs  DictionaryIO.hs  WordDictionary.hs
haskell-server/src/Bolour/Language/Service/: MaskedWordsPreprocessor.hs
haskell-server/src/Bolour/Language/Util/: WordUtil.hs
haskell-server/src/Bolour/Plane/Domain/: Axis.hs  BlackWhiteGrid.hs  BlackWhitePoint.hs  Grid.hs  GridValue.hs  LineSegment.hs  Point.hs
haskell-server/src/Bolour/Util/: BlackWhite.hs  Cache.hs  CompactStringSet.hs  Core.hs  DbConfig.hs  DbUtil.hs  Empty.hs  EnvUtil.hs  FileUtil.hs  FrequencyDistribution.hs  HttpUtil.hs  Middleware.hs  MiscUtil.hs  PersistRunner.hs  StaticTextFileCache.hs  VersionStamped.hs  WaiUtil.hs
haskell-server/static/: index.html
haskell-server/test/: Spec.hs
haskell-server/test-data/: sqlite-memory-config.yml  test-config.yml
haskell-server/test/BoardGame/Common/Domain/: GridSpec.hs
haskell-server/test/BoardGame/Integration/: GameClientSpec.hs  JsonSpec.hs
haskell-server/test/BoardGame/Server/Domain/: BoardSpec.hs  CommonSpec.hs  CrossWordFinderSpec.hs  DictionaryCacheSpec.hs  DictionarySpec.hs  EnglishDictionarySpec.hs  GridSpec.hs  HopelessBlanksSpec.hs  HopelessBlanksSpec2.hs  IndexedDictionarySpec.hs  PieceProviderSpec.hs  ScorerSpec.hs  ServerParametersSpec.hs  SparseGridSpec.hs  StripMatcherSpec.hs  StripMatcherSpec2.hs  StripMatcherSpec3.hs  SwissCheeseGridSpec.hs  TileSackSpec.hs  WordDictionarySpec.hs  WordMatcherSpec.hs
haskell-server/test/BoardGame/Server/Service/: BaseServiceFixtures.hs  GameServiceSpec.hs  NegativeGameServiceSpec.hs  PieceProviderSpec.hs  ServiceTestFixtures.hs
haskell-server/test/BoardGame/Server/Web/: ConvertersSpec.hs  GameEndPointSpec.hs  JsonSpec.hs  WebTestFixtures.hs
haskell-server/test/BoardGame/Util/: TestUtil.hs
haskell-server/test/Bolour/Grid/: BlackWhiteGridSpec.hs
haskell-server/test/Bolour/Language/Domain/: WordDictionarySpec.hs
haskell-server/test/Bolour/Plane/Domain/: BlackWhiteGridSpec.hs
haskell-server/test/Bolour/Util/: CompactStringSetSpec.hs  DataFileSpec.hs  FrequencyDistributionSpec.hs  SpecUtil.hs  StaticTextFileCacheSpec.hs
haskell-server/test/InFocus/: Main.hs
haskell-server/trial/: AsyncSample.hs  CatchTrial.hs  IORefSample.hs  MvarSample.hs  SequenceTrial.hs  TempTrial.hs  UUIDTrial.hs
(+427 files in other folders)
