name:           boardgame
version:        0.0.0
build-type:     Simple
cabal-version:  >= 1.10
data-files:     data/*.txt

library
  hs-source-dirs:
      src
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , containers
    , vector
    , random
    , servant == 0.6.*
    , servant-server
    , servant-client
    , transformers
    , resourcet
    , aeson
    , wai
    , wai-extra
    , wai-cors
    , warp
    , persistent
    , persistent-template
    , persistent-sqlite
    , persistent-postgresql
    , text
    , string-conversions
    , monad-logger
    , monad-control
    , mtl
    , bytestring
    , here
    , safe
    , esqueleto
    , http-client
    , http-types
    , network
    , case-insensitive
    , uuid
    , logging-effect >= 1.1
    , time
    , enclosed-exceptions
    , deepseq
    , yaml
  exposed-modules:
      -- TODO. Separate out util, common, client, and server into different packages.
      Bolour.Util.Cache
      Bolour.Util.StaticTextFileCache
      BoardGame.Server.Domain.GameConfig
      Bolour.Util.DbUtil
      Bolour.Util.EnvUtil
      Bolour.Util.MiscUtil
      Bolour.Util.Middleware
      Bolour.Util.HttpUtil
      Bolour.Util.WaiUtil
      Bolour.Util.FileUtil
      BoardGame.Common.GameApi
      BoardGame.Common.Domain.Player
      BoardGame.Common.Domain.Piece
      BoardGame.Common.Domain.Point
      BoardGame.Common.Domain.GridValue
      BoardGame.Common.Domain.GridPiece
      BoardGame.Common.Domain.GameParams
      BoardGame.Common.Message.GameDto
      BoardGame.Common.Domain.PlayPiece
      BoardGame.Server.Domain.Grid
      BoardGame.Server.Domain.Core
      BoardGame.Server.Domain.Board
      BoardGame.Server.Domain.GameError
      BoardGame.Server.Domain.Game
      BoardGame.Server.Domain.Play
      BoardGame.Server.Domain.Strip
      BoardGame.Server.Domain.Tray
      BoardGame.Server.Domain.PlayInfo
      BoardGame.Server.Domain.PlayDetails
      BoardGame.Server.Domain.BoardStripMatcher
      BoardGame.Server.Domain.IndexedStripMatcher
      BoardGame.Server.Domain.LanguageDictionary
      BoardGame.Server.Domain.IndexedLanguageDictionary
      BoardGame.Server.Domain.GameCache
      BoardGame.Server.Domain.GameEnv
      BoardGame.Server.Domain.DictionaryCache
      BoardGame.Server.Web.GameEndPoint
      BoardGame.Server.Web.Converters
      BoardGame.Server.Service.GameTransformerStack
      BoardGame.Server.Service.GameService
      BoardGame.Server.Service.GameDao
      BoardGame.Util.WordUtil
      BoardGame.Client.GameClient
  other-modules:
      Paths_boardgame
  default-language: Haskell2010

executable boardgame-database-migrator
  main-is: app/DatabaseMigrator.hs
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , boardgame
  default-language: Haskell2010

executable boardgame-server
  main-is: app/Main.hs
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , wai
    , wai-cors
    , warp
    , here
    , http-types
    , boardgame
    , containers
    , mtl
  default-language: Haskell2010

executable trial
  main-is: app/DistributionTrial.hs
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , wai
    , wai-cors
    , warp
    , aeson
    , here
    , http-types
    , bytestring
    , boardgame
    , containers
  default-language: Haskell2010

executable async-sample
  main-is: trial/AsyncSample.hs
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , async
  default-language: Haskell2010

executable mvar-sample
  main-is: trial/MvarSample.hs
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , servant == 0.6.*
    , servant-server
    , servant-client
    , transformers
    , resourcet
    , aeson
    , wai
    , wai-extra
    , warp
    , persistent
    , persistent-template
    , persistent-sqlite
    , persistent-postgresql
    , text
    , string-conversions
    , monad-logger
    , monad-control
    , mtl
    , bytestring
    , here
    , safe
    , esqueleto
    , http-client
    , http-types
    , network
    , case-insensitive
    , hspec
    , boardgame
    , servant-client
    , warp >= 3.2.4
    , http-client
    , http-types
    , logging-effect >= 1.1
    , containers
  other-modules:
      Bolour.Util.DataFileSpec
      Bolour.Util.SpecUtil
      BoardGame.Util.TestUtil
      Bolour.Util.StaticTextFileCacheSpec
      BoardGame.Integration.GameClientSpec
      BoardGame.Integration.JsonSpec
      BoardGame.Server.Domain.GridSpec
      BoardGame.Server.Domain.BoardSpec
      BoardGame.Server.Domain.CommonSpec
      BoardGame.Server.Domain.WordMatcherSpec
      BoardGame.Server.Domain.StripMatcherSpec
      BoardGame.Server.Domain.EnglishDictionarySpec
      BoardGame.Server.Domain.ServerParametersSpec
      BoardGame.Server.Service.GameServiceSpec
      BoardGame.Server.Service.NegativeGameServiceSpec
      BoardGame.Server.Web.GameEndPointSpec
      BoardGame.Server.Web.ConvertersSpec
      BoardGame.Server.Web.WebTestFixtures
  default-language: Haskell2010

test-suite infocus
  type: exitcode-stdio-1.0
  main-is: InFocus/Main.hs
  hs-source-dirs:
      test
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , hspec
    , boardgame
    , transformers, mtl
    , servant == 0.6.*
    , servant-server
    , servant-client
    , http-client
    , aeson
    , logging-effect >= 1.1
    , containers
    , bytestring
  other-modules:
      Bolour.Util.SpecUtil
      BoardGame.Util.TestUtil
      BoardGame.Server.Domain.StripMatcherSpec
      BoardGame.Server.Domain.IndexedDictionarySpec
      BoardGame.Server.Domain.DictionaryCacheSpec
  default-language: Haskell2010

executable uuid
  main-is: trial/UUIDTrial.hs
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , uuid
  default-language: Haskell2010

executable ioref
  main-is: trial/IORefSample.hs
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
  default-language: Haskell2010

