name:           boardgame
version:        0.9.1
build-type:     Simple
cabal-version:  >= 1.10
data-files:     data/*.txt

library
  hs-source-dirs:
      src
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , containers
    , vector
    , random
    , servant == 0.6.*
    , servant-server
    , servant-client
    , transformers
    , resourcet
    , aeson
    , wai
    , wai-extra
    , wai-cors
    , warp
    , persistent
    , persistent-template
    , persistent-sqlite
    , persistent-postgresql
    , text
    , string-conversions
    , monad-logger
    , monad-control
    , mtl
    , bytestring
    , here
    , safe
    , esqueleto
    , http-client
    , http-types
    , network
    , case-insensitive
    , uuid
    , logging-effect >= 1.1
    , time
    , enclosed-exceptions
    , deepseq
    , yaml
    , split
    , hashable
  exposed-modules:
      -- TODO. Separate out util, language, plane, and server into different packages.
      Bolour.Util.Core
      Bolour.Util.Cache
      Bolour.Util.DbConfig
      Bolour.Util.PersistRunner
      Bolour.Util.EnvUtil
      Bolour.Util.MiscUtil
      Bolour.Util.Middleware
      Bolour.Util.HttpUtil
      Bolour.Util.WaiUtil
      Bolour.Util.FileUtil
      Bolour.Util.Empty
      Bolour.Util.BlackWhite
      Bolour.Util.FrequencyDistribution
      Bolour.Language.Util.WordUtil
      Bolour.Language.Domain.WordDictionary
      Bolour.Language.Domain.DictionaryIO
      Bolour.Language.Domain.DictionaryCache
      Bolour.Plane.Domain.Point
      Bolour.Plane.Domain.Axis
      Bolour.Plane.Domain.GridValue
      Bolour.Plane.Domain.Grid
      Bolour.Plane.Domain.LineSegment
      Bolour.Plane.Domain.BlackWhitePoint
      Bolour.Plane.Domain.BlackWhiteGrid
      BoardGame.Common.GameApi
      BoardGame.Server.Domain.ServerConfig
      BoardGame.Common.Domain.PlayerDto
      BoardGame.Common.Domain.Piece
      BoardGame.Common.Domain.GridPiece
      BoardGame.Common.Domain.PieceProviderType
      BoardGame.Common.Domain.GameParams
      BoardGame.Common.Message.HandShakeResponse
      BoardGame.Common.Message.StartGameRequest
      BoardGame.Common.Message.StartGameResponse
      BoardGame.Common.Message.CommitPlayResponse
      BoardGame.Common.Message.MachinePlayResponse
      BoardGame.Common.Message.SwapPieceResponse
      BoardGame.Common.Domain.PlayPiece
      BoardGame.Common.Domain.StopInfo
      BoardGame.Common.Domain.GameMiniState
      BoardGame.Common.Domain.GameSummary
      BoardGame.Server.Domain.PieceProvider
      BoardGame.Server.Domain.Board
      BoardGame.Server.Domain.GameError
      BoardGame.Server.Domain.Game
      BoardGame.Server.Domain.GameBase
      BoardGame.Server.Domain.GameTransitions
      BoardGame.Server.Domain.Play
      BoardGame.Server.Domain.Player
      BoardGame.Server.Domain.Strip
      BoardGame.Server.Domain.Tray
      BoardGame.Server.Domain.PlayInfo
      BoardGame.Server.Domain.PlayDetails
      BoardGame.Server.Domain.StripMatcher
      BoardGame.Server.Domain.GameCache
      BoardGame.Server.Domain.GameEnv
      BoardGame.Server.Domain.CrossWordFinder
      BoardGame.Server.Domain.Scorer
      BoardGame.Server.Web.GameEndPoint
      BoardGame.Server.Web.Converters
      BoardGame.Server.Service.TypeDefs
      BoardGame.Server.Service.GameTransformerStack
      BoardGame.Server.Service.GameService
      BoardGame.Server.Service.GameLetterDistribution
      BoardGame.Server.Service.GameDao
      BoardGame.Server.Service.GamePersister
      BoardGame.Server.Service.GameJsonPersister
      BoardGame.Server.Service.GameJsonSqlPersister
      BoardGame.Client.GameClient
  other-modules:
      Paths_boardgame
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , servant == 0.6.*
    , servant-server
    , servant-client
    , transformers
    , resourcet
    , aeson
    , wai
    , wai-extra
    , warp
    , persistent
    , persistent-template
    , persistent-sqlite
    , persistent-postgresql
    , text
    , string-conversions
    , monad-logger
    , monad-control
    , mtl
    , bytestring
    , here
    , safe
    , esqueleto
    , http-client
    , http-types
    , network
    , case-insensitive
    , hspec
    , boardgame
    , servant-client
    , warp >= 3.2.4
    , http-client
    , http-types
    , logging-effect >= 1.1
    , containers
    , time
  other-modules:
      Bolour.Language.Domain.WordDictionarySpec
      Bolour.Plane.Domain.BlackWhiteGridSpec
      Bolour.Util.DataFileSpec
      Bolour.Util.FrequencyDistributionSpec
      Bolour.Util.SpecUtil
      BoardGame.Util.TestUtil
      BoardGame.Integration.GameClientSpec
      BoardGame.Integration.JsonSpec
      BoardGame.Common.Domain.GridSpec
      BoardGame.Server.Domain.BoardSpec
      BoardGame.Server.Domain.CommonSpec
      BoardGame.Server.Domain.StripMatcherSpec
      BoardGame.Server.Domain.StripMatcherSpec2
      BoardGame.Server.Domain.ServerParametersSpec
      BoardGame.Server.Domain.CrossWordFinderSpec
      BoardGame.Server.Domain.ScorerSpec
      BoardGame.Server.Domain.HopelessBlanksSpec
      BoardGame.Server.Domain.HopelessBlanksSpec2
      BoardGame.Server.Service.BaseServiceFixtures
      BoardGame.Server.Service.ServiceTestFixtures
      BoardGame.Server.Service.GameServiceSpec
      BoardGame.Server.Service.NegativeGameServiceSpec
      BoardGame.Server.Service.PieceProviderSpec
      BoardGame.Server.Web.GameEndPointSpec
      BoardGame.Server.Web.ConvertersSpec
      BoardGame.Server.Web.WebTestFixtures
  default-language: Haskell2010

test-suite infocus
  type: exitcode-stdio-1.0
  main-is: InFocus/Main.hs
  hs-source-dirs:
      test
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , hspec
    , boardgame
    , transformers, mtl
    , servant == 0.6.*
    , servant-server
    , servant-client
    , http-client
    , aeson
    , logging-effect >= 1.1
    , containers
    , bytestring
    , time
  other-modules:
      BoardGame.Server.Domain.StripMatcherSpec3
      Bolour.Language.Domain.WordDictionarySpec
      Bolour.Util.SpecUtil
      BoardGame.Util.TestUtil
      BoardGame.Server.Web.WebTestFixtures
      BoardGame.Server.Domain.StripMatcherSpec
      BoardGame.Server.Service.GameServiceSpec
      BoardGame.Server.Domain.ServerParametersSpec
      BoardGame.Server.Domain.CrossWordFinderSpec
      BoardGame.Server.Domain.HopelessBlanksSpec2
  default-language: Haskell2010

-- END LIBRARY
-- START EXECUTABLES.

executable boardgame-database-migrator
  main-is: app/DatabaseMigrator.hs
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , boardgame
  default-language: Haskell2010

executable masked-words-preprocessor
  main-is: src/Bolour/Language/Service/MaskedWordsPreprocessor.hs
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , containers
    , boardgame
  default-language: Haskell2010

executable boardgame-seed-data-populator
  main-is: app/SeedDataPopulator.hs
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , transformers
    , boardgame
  default-language: Haskell2010

executable boardgame-sample-client
  main-is: app/SampleClient.hs
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , boardgame
    , servant-client
    , mtl
    , aeson
    , wai-cors
    , http-client
  default-language: Haskell2010

executable boardgame-server
  main-is: app/Main.hs
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , wai
    , wai-cors
    , warp
    , here
    , http-types
    , boardgame
    , containers
    , mtl
  default-language: Haskell2010

executable trial
  main-is: trial/CatchTrial.hs
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , containers
    , transformers
    , mtl
    , logging-effect >= 1.1
  default-language: Haskell2010
--executable trial
--  main-is: app/Trial.hs
--  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
--  build-depends:
--      base
--    , wai
--    , wai-cors
--    , warp
--    , aeson
--    , here
--    , http-types
--    , bytestring
--    , boardgame
--    , containers
--    , transformers
--    , mtl
--    , logging-effect >= 1.1
--  default-language: Haskell2010

--executable sqlite-memory-trial
--  main-is: trial/SqliteTrial.hs
--  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
--  build-depends:
--      base
--    , wai
--    , aeson
--    , here
--    , http-types
--    , bytestring
--    , boardgame
--    , containers
--    , persistent
--    , persistent-template
--    , persistent-sqlite
--    , transformers
--  default-language: Haskell2010

--executable async-sample
--  main-is: trial/AsyncSample.hs
--  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
--  build-depends:
--      base
--    , async
--  default-language: Haskell2010

--executable mvar-sample
--  main-is: trial/MvarSample.hs
--  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
--  build-depends:
--      base
--  default-language: Haskell2010

--executable uuid
--  main-is: trial/UUIDTrial.hs
--  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
--  build-depends:
--      base
--    , uuid
--  default-language: Haskell2010
--
--executable ioref
--  main-is: trial/IORefSample.hs
--  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
--  build-depends:
--      base
--  default-language: Haskell2010
--
--executable temp-trial
--  main-is: trial/TempTrial.hs
--  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
--  build-depends:
--      base
--    , boardgame
--  default-language: Haskell2010
--
